[build-system]
requires = [
    "packaging",
    "setuptools",
    "wheel",
    "cmake",
    "numpy",
    "charset_normalizer",
]
#build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff -n auto"
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning", "error::DeprecationWarning"]

[tool.cibuildwheel]
# update skip when numpy wheels become available
skip = ["*-musllinux_*", "cp31?-win32", "*-manylinux_i686"]
test-extras = ["test"]
test-command = "python {package}/download_data.py && python -m pytest -vv {package}/tests"
test-skip = ["*universal2:arm64"]
# to match numpy, we use manylinux2014 for cp310+
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
# Increase the output of pip wheel to -vvv
build-verbosity = 1

[tool.cibuildwheel.environment]
# this makes sure that we build only on platforms that have a corresponding numpy wheel
PIP_ONLY_BINARY = ":all:"
CIBW = "1"

[[tool.cibuildwheel.overrides]]
# to match numpy, we use manylinux2010 for cp36 to cp39
select = "cp3?-*"
manylinux-x86_64-image = "manylinux2010"
manylinux-i686-image = "manylinux2010"
